redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
      app: redis-pod
spec:
  containers:
  - name: redis
    image: redis:5.0.3
    ports:
    - containerPort: 6379
    resources:
      limits:
        cpu: "0.1"
        memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis-pod
  ports:
  - port: 6379
    nodePort: 31500
  type: NodePort
---
